# Ackerman-Car-ROS2

./: README.md
0.开源项目介绍/差速/: 从零搭建ROS机器人平台.xmind  搭建差速小车.xmind
0.开源项目介绍/阿克曼/: 搭建阿克曼小车.xmind
2.阿克曼小车硬件方案介绍/1.STM32底层电路驱动板/: GD32F103.xmind
2.阿克曼小车硬件方案介绍/2.香橙派3 LTS/: 官方地址链接.txt
2.阿克曼小车硬件方案介绍/3.RPLIADR A1M8/: 官方地址链接.txt
3.搭建阿克曼小车材料准备/: 搭建ROS阿克曼平台材料准备.xmind
3.搭建阿克曼小车材料准备/1.阿克曼小车机械主体板材加工文件 - 淘宝亚克力定制加工/: mbot_v2.dxf
3.搭建阿克曼小车材料准备/2.底层驱动PCB加工文件-嘉立创/: BOM_Board1_PCB_2022-10-09.xlsx  PickAndPlace_PCB_2022-10-09.xlsx
3.搭建阿克曼小车材料准备/3.部分模块型号与图例/: 部分模块的型号与图例.xlsx
7.ROS2相应功能包/mbot_bringup/: CMakeLists.txt  package.xml
7.ROS2相应功能包/mbot_bringup/include/mbot_bringup/: mbot.h  mbot_linux_serial.h
7.ROS2相应功能包/mbot_bringup/launch/: mbot_launch.py  mbot_with_lidar_launch.py
7.ROS2相应功能包/mbot_bringup/src/: mbot.cpp  mbot_bringup.cpp  mbot_linux_serial.cpp
7.ROS2相应功能包/mbot_description/: package.xml  setup.cfg  setup.py
7.ROS2相应功能包/mbot_description/launch/: display.launch.py  gazebo.launch.py
7.ROS2相应功能包/mbot_description/meshes/: left_back_wheel_1.stl  lidar_link_1.stl  right_back_wheel_1.stl
7.ROS2相应功能包/mbot_description/urdf/: materials.xacro  mbot.gazebo  mbot.trans  mbot.xacro
7.ROS2相应功能包/sllidar_ros2-humble/launch/: sllidar_s2_launch.py
7.ROS2相应功能包/sllidar_ros2-humble/src/: sllidar_node.cpp
8.系统配置以及功能包启动/: 使用软件.txt
